--- a/CityParkAgente/CityParkAgente/CityParkAgente/Pages/VerificarAutoPage.xaml
+++ b/CityParkAgente/CityParkAgente/CityParkAgente/Pages/VerificarAutoPage.xaml
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="CityParkAgente.Pages.VerificarAutoPage" 
+             x:Class="CityParkAgente.Pages.VerificarAutoPage"            
+             xmlns:local="clr-namespace:CityParkAgente.Behaviors;assembly=CityParkAgente"
              BindingContext="{Binding Main, Source={StaticResource Locator}}"
              Title="Login"
              BackgroundColor="{StaticResource MainColor}">
@@ -11,10 +12,17 @@
                                    Color="{StaticResource AccentColor2}" 
                                    IsRunning="{Binding IsRunning}" >
         </ActivityIndicator>
-        <Entry Placeholder=" Introduce la placa"
+        <Label Text="Ingrese la placa" FontSize="Small" />
+        <Entry Placeholder="AAA-1234"
                    Text="{Binding Placa,Mode=TwoWay}"
                    TextColor="{StaticResource FontColor}">
+
+            <Entry.Behaviors>
+                <local:PlacaValidationBehavior />
+            </Entry.Behaviors>
+
         </Entry>
+            
         <Button 
                    Command="{Binding VerificarAutoCommand}"
                    Text="Verificar"
